<resources>
    <string name="app_name">Все о печени</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // menu navbar
    <string name="begin">Главная</string>
    <string name="table_five">Стол №5</string>
    <string name="recipient">Рецепты стола №5</string>
    <string name="menu_week">Меню неделька</string>
    <string name="hepatoprotectors">Гепатопротекторы</string>
    <string name="about_liver">О печени</string>
    <string name="how_to_treat">Как лечить</string>
    <string name="liver_disease">Заболевания печени</string>
    <string name="alarm_clock">Эффективный будильник</string>

    // table 5
    <string name="yes">МОЖНО</string>
    <string name="no">НЕЛЬЗЯ</string>

    <string name="yes_dialog">Сохранить данные</string>
    <string name="no_dialog">В другой раз</string>
    <string name="title_dialog">Кеширование данных</string>
    <string name="content_dialog">Для работы приложенияв без интернета нужно закешировать данные (Это может занять около 2 минут)</string>

    // hepatoprotectors
    <string name="title_hepatoprotectors">Гепатопротекторы: обзор лучших препаратов для лечения печени</string>
    <string name="p1">Наш постоянный эксперт, гепатолог Сергей Вялов как-то рассказывал о случае из своей врачебной практики. К нему на приём пришла 27-летняя девушка. Доктор сначала выяснил, какие у неё жалобы, а потом спросил: «Знаете ли вы, где находится ваша печень?». Барышня растерялась и начала хвататься за бока… И знаете, я бы тоже, наверняка, растерялась, если бы не имела отношения к медицине. Ведь когда ты начинаешь вспоминать об органе? Когда заболит. А печень не болит, она к этому не приспособлена – нервных окончаний в органе ноль целых ноль десятых. \n\n Так что для тех, кто не в курсе или забыл: печень находится ниже диафрагмы, с правой стороны, за рёбрами.</string>
    <string name="p2">И ещё небольшой ликбез. Печень взрослого человека в среднем весит около 1,5 килограммов, ежеминутно прогоняет через себя около 1,5 литров крови (сопоставьте: всего в организме человека 4-6 литров крови!) и выполняет огромное количество функций. Огромное – это сколько? Если вы на работе завалены задачами по самую макушку, не успеваете ни чаю попить, ни пообедать, бегаете с совещания на совещание, то вы выполняете не больше 1/10 того, что изо дня в день без жалоб, претензий и требований прибавить жалованье делает печень.</string>
    <string name="h1">ЧЕМ ЗАНИМАЕТСЯ ПЕЧЕНЬ</string>
    <string name="p3">Печень принято называть большой химической лабораторией: в каждый момент времени в ней происходят уникальные процессы и реакции. Задача №1 для печени – обезвреживать токсичные вещества, поступающие извне и образующиеся внутри организма. Без печени человек просто-напросто «захлебнётся» в ядах. Поэтому можно однозначно сказать: жизнь без этого органа невозможна.</string>
    <string name="p4">Другие функции печени:</string>
    <string name="p5">. Метаболизм углеводов, белков и жиров; \n\n. Пополнение и хранение запасов гликогена, основных витаминов, а также ряда микроэлементов – железа, меди, кобальта и фолиевой кислоты; \n\n\. Печень служит резервуаром для значительного объёма крови, который может быть выброшен при кровопотере или шоке;\n\n. Синтез холестерина и его эфиров, желчных кислот, билирубина, продукция и секреция желчи;\n\n. Участие в распаде белков до конечных продуктов – аммиака и мочевины;\n\n. Участие в процессах гемопоэза (кроветворения) у плода;\n\n. Синтез гормонов и ферментов, которые активно участвуют в преобразовании пищи в 12-перстной кишке и прочих отделах тонкого кишечника. </string>
    <string name="p6">Внешние яды поступают в человеческий организм с воздухом, пищей, алкоголем, лекарствами и ещё много с чем. Чтобы отделить «зёрна от плевел», печень запускает процесс детоксикации или обезвреживания. Химическая обработка вредных веществ проходит в два этапа.\nСначала «на усмотрение» печени происходит одно из трёх действий: вещество подвергается окислению (отсоединению электронов), восстановлению (присоединению электронов) или гидролизу.\nНа втором этапе полученные вещества соединяются с одним из этого ряда – серной или глюкуроновой кислотой, глицином, ацетилатом, глутамином. Во всех реакциях обезвреживания участвует ещё пара веществ – никотинамидадениндинуклеотид фосфат и молекулярный кислород.</string>
    <string name="h2">ОТ ЧЕГО И ЗАЧЕМ ЗАЩИЩАТЬ ПЕЧЕНЬ</string>
    <string name="p7">Где печень находится – узнали, чем занимается – поняли. Открытым остался вопрос – от чего, зачем и как её защищать? \nДля здоровья печени от человека нужно: не есть вредную пищу, не набирать избыточный вес, не злоупотреблять алкоголем и лекарствами, не курить. Реально ли так жить? Будем честными, на такие жертвы мы способны, только когда печень уже «отваливается». А «отваливаться» она начнёт, поверьте на слово, если регулярно есть жирное жареное мясо, запивать его спиртным (даже некрепким и даже в небольших объёмах) и вдогонку закуривать сигареткой. Подкрепляю слова фактами.\nОколо 30% населения России страдают ожирением (в Минздраве уже признали начало эпидемии), а лишний вес – это основной фактор развития <a href="http://vseopecheni.ru/zabolevaniya-pecheni/gepatoz/">неалкогольной жировой болезни печени</a> (НАЖБП). Свежее исследование французских учёных показало, что более 75% пациентов с ожирением имеют ещё и печеночную патологию. Вот такие цифры.\n\nПечени в таких условиях жизненно необходим щит, который:\n<b>.</b>поможет восстановить повреждённые клетки печени и убережёт здоровые;\n<b>.</b>поможет печени справиться с переработкой жира и алкоголя, таким образом снижая нагрузку на орган;\n.отрегулирует желчеотток.</string>
    <string name="h3">КЛАССИФИКАЦИЯ ГЕПАТОПРОТЕКТОРОВ</string>
    <string name="p8">Этим набором функций обладают препараты, именуемые <b><a href="http://vseopecheni.ru/news/Gepatoprotektori-mifi-i-predrassudki/">гепатопротекторами</a></b>. Принцип их работы заложен в самом названии: греческое «hepar» переводится как «печень», латинское слово «protector» означает «страж, хранитель, защитник». То есть буквально гепатопротекторы – это защитники печени.\nГепатопротекторы по механизму действия принято классифицировать на 6 разных типов:\n. <a href="http://vseopecheni.ru/kak-lechit-pechen/Gepatoprotektori/Ursosan/" class="ui-link">Урсодезоксихолевая кислота;</a>\n. Гепатопротекторы на основе расторопши;\n. Гепатопротекторы с флавоноидами других растений;\n. Гепатопротекторы животного происхождения;\n. Гепатопротекторы с эссенциальными фосфолипидами;\n. Гепатопротекторы разных групп (бемитил, метилурацил, адеметионин, кислота липоевая).\nПринцип работы у каждого из гепатопротекторов – свой, эффективность – тоже разная. Так, многие медики говорят, что на российском рынке лекарственных препаратов нет действенных средств на основе расторопши. Да, это трава без побочных эффектов, но и без эффектов в принципе.\nС эссенциальными фосфолипидами тоже всё очень неоднозначно.</string>
    <string name="p9">Сергей Вялов, врач-гепатолог\n\nПроизводители делают маркетинговый ход: пишут на упаковке 300 мг, и мелким шрифтом подписывают «Содержание фосфатидилхолина – основного действующего вещества в эссенциальных фосфолипидах – составляет 80%, 50%, 30%, 26%». При этом исследования последних лет говорят о том, что большое содержание фосфатидилхолина запускает определенные процессы в кишечнике, которые могут усугубить ситуацию. Поэтому на сегодняшний день ситуация вокруг эссенциальных фосфолипидов спорная.\n\nПолное интервью доктора Вялова о различных видах гепатопротекторов <b><a href="http://vseopecheni.ru/news/chem_lechit_pechen/" class="ui-link">здесь.</a></b>\n\nПо словам врачей-гепатологов, на данный момент лучше всего себя показывают гепатопротекторы на основе урсодезоксихолевой кислоты. УДХК защищает клетки печени от гибели, восстанавливает структуру их мембран, уменьшает воспаление, препятствует развитию фиброза и цирроза печени. Это стандартная терапия, она есть во всех рекомендациях – как в международных, так и в отечественных. Подробнее об УДХК и препаратах на её основе <a href="http://vseopecheni.ru/about-liver/Ursodezoksiholevaja-kislota-UDHK/" class="ui-link"><b>читайте здесь.</b></a>\n\nВажно: гепатопротекторы не могут полностью защитить печень от алкогольного и лекарственного воздействия, от вреда, наносимого инфекцией или обилием жиров в вашем рационе. Они только помогают печени более эффективно функционировать, в том числе – в условиях повышенной опасности. Гепатопротекторы – это не волшебная таблетка от всех печёночных бед, но по крайней мере они помогут минимизировать риски!</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">вторник</string>
    <string name="wednesday">среда</string>
    <string name="thursday">четверг</string>
    <string name="friday">пятница</string>
    <string name="saturday">суббота</string>
    <string name="sunday">воскресенье</string>
    <string name="word_about_liver">слово о печени</string>
    <string name="word_about_liver_content">У древних вавилонян и китайцев (2000-1000 лет до н.э.) печень считалась вместилищем души.</string>
    <string name="liver_structure">строение печени</string>
    <string name="liver_hurt">болит ли печень?</string>
    <string name="mif">5 мифов о работе печени</string>
    <string name="mif_content">Печень является важнейшим органом и главным фильтром человеческого организма.</string>
    <string name="cholesterol">Печень и холестерин</string>
    <string name="cholesterol_content">Печень – это основное место синтеза холестерина и желчных кислот.</string>
    <string name="connection">Есть ли связь между ИМТ и печенью</string>
    <string name="connection_content">На вопрос, поставленный в заголовке статьи, можно ответить так: связь есть, причём самая прямая.</string>
    <string name="liver_structure_content">Важно понимать, что у печени нервных окончаний нет, поэтому болеть она не может.</string>
    <string name="liver_hurt_content">И в частной беседе, и в кабинете врача как часто, как привычно мы слышим: «У меня болит печень».</string>
    <string name="liver_diagnosis">диагностика печени</string>
    <string name="function_liver">Как восстановить функции печени</string>
    <string name="question">К вопросу о выборе лекарств</string>
    <string name="drug_selection">Выбор препарата на примере урсодезоксихолевой кислоты</string>
    <string name="ursodeoxycholic_acid">Урсодезоксихолевая кислота (УДХК)</string>
    <string name="medication_button">ПРИЕМ ЛЕКАРСТВ</string>
    <string name="food_intake_button">ПРИЕМ ПИЩИ</string>
    <string name="medicine_name">Название лекарства</string>
    <string name="first_appointment">Первый прием</string>
    <string name="second_appointment">Второй прием</string>
    <string name="third_appointment">Третий прием</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="close">ОТМЕНА</string>
    <string name="first_time">Время первого приема пищи</string>
    <string name="save_info">Загрузить оффлайн версию</string>

</resources>
