<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/begin"
        android:title="@string/begin" />
        <item
            android:id="@+id/table_five"
            android:icon="@drawable/ic_11"
            android:title="@string/table_five" />
        <item
            android:id="@+id/recipient"
            android:icon="@drawable/ic_12"
            android:title="@string/recipient" />
        <item
            android:id="@+id/menu_week"
            android:icon="@drawable/ic_13"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/hepatoprotectors"
            android:icon="@drawable/ic_14"
            android:title="@string/hepatoprotectors" />
        <item
            android:id="@+id/about_liver"
            android:icon="@drawable/ic_15"
            android:title="@string/about_liver" />
        <item
            android:id="@+id/how_to_treat"
            android:icon="@drawable/ic_16"
            android:title="@string/how_to_treat" />
        <item
            android:id="@+id/liver_disease"
            android:icon="@drawable/ic_17"
            android:title="@string/liver_disease" />
        <item
            android:id="@+id/alarm_clock"
            android:icon="@drawable/ic_18"
            android:title="@string/alarm_clock" />
    </group>
</menu>
