<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="29dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/panel_white"
    android:elevation="4dp"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/first_time" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorButtonGreen"
        android:text="@string/close"
        android:textColor="#000000" />

</LinearLayout>
